# alembic-multischema

./: README.md  docker-compose.yaml  pyproject.toml
src/multischema/: alembic.ini  app_models.py  core_models.py  create_db_with_schema.py
src/multischema/app/database/revisions/: env.py
src/multischema/app/database/revisions/versions/: 76f1614a6597_.py  ee3945f68741_.py
src/multischema/core/database/revisions/: env.py
src/multischema/core/database/revisions/versions/: 210e3bbc5e8a_.py
src/multischema/db/: base.py  manage.py
