[tool.poetry]
name = "multischema"
version = "0.1.0"
description = ""
authors = ["Nicola Ballotta <432172+nicolaballotta@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
SQLAlchemy = "^1.4.41"
alembic = "^1.8.1"
SQLAlchemy-Utils = "^0.38.3"
psycopg2-binary = "^2.9.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
